--- a/TODO/index.html
+++ b/TODO/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="a1">
       <div class="todo">
-        <h3>ToDo Listw</h3>
+        <h3>ToDo List</h3>
       </div>
     </header>
     <main>
