--- a/products/src/index.html
+++ b/products/src/index.html
@@ -5,7 +5,7 @@
   <title>Products</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/products-18-909286.png">
+  <link rel="icon" type="image/x-icon" href="https://icons-for-free.com/iconfiles/png/512/linecon+products+round+icon-1320165923260225670.png">
 </head>
 <body>
   <app-root></app-root>
